--- a/graph/templates/graph/tree_inline.html
+++ b/graph/templates/graph/tree_inline.html
@@ -66,7 +66,7 @@
                             <img style="border-radius: 50%;" src="{% static 'account/img/new_logo.png' %}"/>
                         </div>
                         <div class="brand">
-                            {{ node.title }}{{ node.name }}
+                            Id={{ node.pk }} {{ node.name }}
                         </div>
                         </div>
 		            	<div id="displayzone_{{ id }}" class="displayzone"></div>
