--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="form-group">
                         <label>Ваша реферальная ссылка</label>
-                        <input type="text"  name="referal"  class="form-control border-input" value="http://104.238.171.115/account/signup?sponsor={{user.pk }}">
+                        <input type="text"  name="referal"  class="form-control border-input" value="http://104.238.171.115/account/signup?parent={{user.id }}">
                     </div>
                 </div>
         <div class="row">
