--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -29,6 +29,7 @@
                                 <form action="{% url 'account:signup' %}" method="post">
                                     {% csrf_token %}
                                     <div class="row">
+                                        <input type="hidden" name="parent" value="{{ parent }}">
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Фамилия *</label>
