transactional, validate username

--- a/account/templates/account/invited.html
+++ b/account/templates/account/invited.html
@@ -57,7 +57,7 @@
 
             $.ajax({
                 type: 'GET',
-                url: '/account/invited_ajax',
+                url: '{% url "account:invited_ajax" %}',
                 data: {
           'level': level
         },
