--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -32,13 +32,13 @@
                                         <div class="col-md-5">
                                             <div class="form-group">
                                                 <label>Логин</label>
-                                                <input type="text" name="username" class="form-control border-input" placeholder="Логин">
+                                                <input type="text" name="username" required class="form-control border-input" placeholder="Логин">
                                             </div>
                                         </div>
                                             <div class="col-md-5">
                                             <div class="form-group">
                                                 <label>Пароль</label>
-                                                <input type="text" name="password" class="form-control border-input" placeholder="Пароль">
+                                                <input type="password" name="password" required class="form-control border-input" placeholder="Пароль">
                                             </div>
                                         </div>
                                     </div>
