--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,9 +1,35 @@
-{% extends "shop/base.html" %}
+{% extends "base.html" %}
 {% block title %}
   Ваша корзина товаров
 {% endblock %}
 {% block content %}
-<div class="col-md-12">
+
+    <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+
+                        <div class="top container-fluid">
+                          Интернет магазин
+                        </div>
+                        <div class="top-bl">
+                          <div class="container-fluid">
+                            <div class="cart ">
+                        {% with total_items=cart|length %}
+                            {% if cart|length > 0 %}
+                                Ваша корзина:
+                                <a href="{% url 'CartDetail' %}" class="text-info">
+                                    {{ total_items }} тов. {{ cart.get_total_price }} y.e.
+                                </a>
+                             {% else %}
+                                  Корзина пустая
+                            {% endif %}
+                        {% endwith %}
+                    </div>
+                          </div>
+                        </div>
+
+                      <section id="content row" class="container-fluid">
+            <div class="col-md-12">
     <div class="card">
         <div class="header">
             <h1>Ваша корзина товаров</h1>
@@ -59,4 +85,13 @@
     <a href="{% url 'ProductList' %}" class="btn btn-info btn-fill">Продолжить Шопинг</a>
     <a href="{% url 'OrderCreate' %}" class="btn btn-info btn-fill">Оформить заказ</a>
   </p>
+                      </section>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
 {% endblock %}
