--- a/graph/templates/graph/index.html
+++ b/graph/templates/graph/index.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles i18n %}
 
 {% block title %}{% trans "Model graphs" %}{% endblock title %}
