--- a/graph/templates/graph/tree.html
+++ b/graph/templates/graph/tree.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles mptt_tags %}
 
 {% block title %}Model graph{% endblock title %}
