--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -1,12 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
-  Спасибо за заказ
+   Страница товаров
 {% endblock %}
-
 {% block content %}
-
-    <div class="content">
+ <div class="content">
             <div class="container-fluid">
                 <div class="row">
 
@@ -31,13 +30,24 @@
                         </div>
 
                       <section id="content row" class="container-fluid">
-                        <h1 class="text-success">Заказ принят. Спасибо за заказ</h1>
-  <p class="text-danger">Идентификатор вашего заказа: {{ order.id }}</p>
+                       <div id="main" class="col-sm-9">
+    <h1>Товары</h1>
+    <div class="items row">
+      {% for product in products %}
+        <div class="item col-sm-4">
+          <a href="{{product.id}}">
+       <img src="{% if product.image %}{{ product.image.url }}{% endif %}" class="img-responsive " width="200" height="100">
+          </a>
+          <a href="{{ product.id}}">{{ product.name }}</a><br>
+          {{ product.price }} y.e.
+        </div>
+      {% endfor %}
+    </div>
+  </div>
                       </section>
 
                 </div>
             </div>
         </div>
-
 
 {% endblock %}
