left-right count

--- a/graph/templates/graph/tree_inline.html
+++ b/graph/templates/graph/tree_inline.html
@@ -55,6 +55,9 @@
             <div class="container-fluid">
                 <a href="{% url 'account:structure' %}">Показать списком</a>
                <div class="text-center">
+               <div class="row">
+                   Левая: {{ left_count }} | Правая: {{ right_count }} | Общее количество: {{ total_count }}
+               </div>
 	<div class="text-left" style="display:inline-block">
 		<div class="tree">
 			<ul>
