--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -19,7 +19,7 @@
 {% block javascript %}
   <script>
       $(document).ready(function(){
-         $("#email").change(function () {
+         $("#username").change(function () {
           var username = $(this).val();
 
       $.ajax({
@@ -75,8 +75,8 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>ID спонсора *</label>
-                                                <input type="number" name="parent_id" required class="form-control border-input" placeholder="ID" >
+                                                <label>ID спонсора</label>
+                                                <input type="number" name="parent_id" class="form-control border-input" placeholder="ID" >
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -95,14 +95,22 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="exampleInputEmail1">Email *</label>
-                                                <input type="email" id="email" name="email" required class="form-control border-input" placeholder="Email">
+                                                <label style="color: darkgreen">Логин *</label>
+                                                <input type="text" id="username" name="username" required class="form-control border-input">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Сотовый телефон *</label>
-                                                <input type="text" name="phone" pattern="^[0-9]{9,15}$"  required class="form-control border-input" placeholder="Телефон">
+                                                <label style="color: darkgreen">Пароль *</label>
+                                                <input type="password" id="user_password" pattern="^[A-Za-z\d]{4,15}$" name="user_password" required class="form-control border-input">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label>Моб. телефон или email *</label>
+                                                <input type="text" name="email_phone" pattern="^([0-9]{9,15})|([A-Za-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3})$"  required class="form-control border-input">
                                             </div>
                                         </div>
                                     </div>
