user.id->node.id

--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -130,9 +130,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group">
+                    <div class="col-lg-8 col-md-7">
+                        <div class="form-group">
                         <label>Ваша реферальная ссылка</label>
                         <input type="text"  name="referal"  class="form-control border-input" value="http://104.238.171.115/account/signup?parent={{user.id }}">
+                        </div>
                     </div>
                 </div>
         <div class="row">
