html password label text

--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -101,7 +101,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label style="color: darkgreen">Пароль *</label>
+                                                <label style="color: darkgreen">Пароль * (мин. 4 симв. буквы и цифры)</label>
                                                 <input type="password" id="user_password" pattern="^[A-Za-z\d]{4,15}$" name="user_password" required class="form-control border-input">
                                             </div>
                                         </div>
