--- a/graph/templates/graph/tree_inline.html
+++ b/graph/templates/graph/tree_inline.html
@@ -64,7 +64,7 @@
                <div class="row">
                    Левая: {{ left_count }} | Правая: {{ right_count }} | Общее количество: {{ total_count }}
                </div>
-	<div class="text-left" style="display:inline-block">
+	<div class="text-left" style="width: 2000px; display:inline-block; overflow-x:scroll">
 		<div class="tree">
 			<ul>
 			{% recursetree nodes %}
@@ -93,4 +93,6 @@
                 </div>
             </div>
         </div>
+{% endblock %}
+ {% block footer %}
 {% endblock %}
