--- a/templates/base.html
+++ b/templates/base.html
@@ -127,6 +127,7 @@
 
 {% endblock %}
 
+        {% block footer %}
         <footer class="footer">
             <div class="container-fluid">
                 <nav class="pull-left">
@@ -144,7 +145,7 @@
                 </div>
             </div>
         </footer>
-
+{% endblock %}
     </div>
 </div>
 </body>
