--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -54,7 +54,50 @@
     	</div>
     </div>
 {% endblock %}
+{% block javascript %}
+  <script>
+      $(document).ready(function(){
 
+          var activate_date = $('#activate_date').val();
+          var date = new Date(activate_date).getTime();
+
+// Set the date we're counting down to
+//var countDownDate = new Date("May 17, 2019 15:37:25").getTime();
+var countDownDate = new Date(date).getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in an element with id="demo"
+  //document.getElementById("timer_val").innerHTML = days + "d " + hours + "h "
+  //+ minutes + "m " + seconds + "s ";
+    var days_txt = "";
+    if(days > 0)
+        days_txt = days + "д ";
+    document.getElementById("timer_val").innerHTML = days_txt + hours + "ч "
+  + minutes + "м " + seconds + "с ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("timer_val").innerHTML = "EXPIRED";
+  }
+}, 1000);
+    	});
+  </script>
+{% endblock %}
 {% block content %}
         <div class="content">
             <div class="container-fluid">
@@ -95,7 +138,7 @@
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Степ</p>
+                                            <p>Этап</p>
                                             {{ node.step}}
                                         </div>
                                     </div>
@@ -146,7 +189,8 @@
                                     <div class="col-xs-7">
                                         <div class="numbers">
                                             <p>Активация</p>
-
+                                            <p id="timer_val" style="color:green; size: 12px"></p>
+                                            <input type="hidden" id="activate_date" value="{{ node.activate_date|date:"c"}}">
                                         </div>
                                     </div>
                                 </div>
