--- a/account/templates/account/structure.html
+++ b/account/templates/account/structure.html
@@ -33,6 +33,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="{% url 'account:bonus_history' %}">
+                        <i class="ti-server"></i>
+                        <p>История бонусов</p>
+                    </a>
+                </li>
+                <li>
                     <a href="{% url 'ProductList' %}">
                         <i class="ti-home"></i>
                         <p>Интернет магазин</p>
