--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Главная</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,14 +17,14 @@
 		<!-- Font -->
 
 
-        <link rel="stylesheet" href="{% static 'css/normalize.css'%}">
-        <link rel="stylesheet" href="{% static 'css/main.css'%}">
-        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
-        <link rel="stylesheet" href="{% static 'css/animate.css'%}">
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-        <link rel="stylesheet" href="{% static 'css/style.css'%}">
-        <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
-        <script src="{% static 'js/vendor/modernizr-2.8.3.min.js'%}"></script>
+        <link rel="stylesheet" href="{% static 'main/css/normalize.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/font-awesome.min.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/animate.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/bootstrap.min.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/style.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/responsive.css'%}">
+        <script src="{% static 'main/js/vendor/modernizr-2.8.3.min.js'%}"></script>
 
 
     </head>
@@ -49,7 +49,7 @@
 									<span class="icon-bar"></span>
 								</button>
 
-								<a href="#" class="navbar-brand"><img src="{% static 'img/logo.png'%}" alt="Logo" /></a>
+								<a href="#" class="navbar-brand"><img src="{% static 'main/img/logo.png'%}" alt="Logo" /></a>
 							</div>
 
 							<div class="navbar-collapse collapse">
@@ -82,7 +82,7 @@
 
 					<div class="carousel-inner" role="listbox">
 						<div class="item active">
-							<img src="{% static 'img/slider1.jpg'%}" alt="Sider Big Image">
+							<img src="{% static 'main/img/slider1.jpg'%}" alt="Sider Big Image">
 							<div class="carousel-caption">
 								<h1 class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 						<div class="item">
-							<img src="{% static 'img/slider2.jpg'%}" alt="Sider Big Image">
+							<img src="{% static 'main/img/slider2.jpg'%}" alt="Sider Big Image">
 							<div class="carousel-caption">
 								<h1 class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
 								<div class="slider-btn wow fadeIn">
@@ -116,7 +116,7 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="about-image wow fadeInLeft">
-							<img src="{% static 'img/about-image.jpg'%}" alt="About Image" />
+							<img src="{% static 'main/img/about-image.jpg'%}" alt="About Image" />
 						</div>
 					</div>
 					<div class="col-sm-6">
@@ -296,8 +296,8 @@
 					<!-- Single Blog -->
 					<div class="col-sm-4">
 						<div class="single-blog">
-							<img src="{% static 'img/blog.jpg'%}" alt="Blog Image" />
-							<h4><a href="blog.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
+							<img src="{% static 'main/img/blog.jpg'%}" alt="Blog Image" />
+							<h4><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 							<a href="#">Read More>></a>
 						</div>
@@ -307,8 +307,8 @@
 					<!-- Single Blog -->
 					<div class="col-sm-4">
 						<div class="single-blog">
-							<img src="{% static 'img/blog.jpg'%}" alt="Blog Image" />
-							<h4><a href="blog.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
+							<img src="{% static 'main/img/blog.jpg'%}" alt="Blog Image" />
+							<h4><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 							<a href="#">Read More>></a>
 						</div>
@@ -318,8 +318,8 @@
 					<!-- Single Blog -->
 					<div class="col-sm-4">
 						<div class="single-blog">
-							<img src="{% static 'img/blog.jpg'%}" alt="Blog Image" />
-							<h4><a href="blog.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
+							<img src="{% static 'main/img/blog.jpg'%}" alt="Blog Image" />
+							<h4><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 							<a href="#">Read More>></a>
 						</div>
@@ -459,7 +459,7 @@
 					<div class="col-sm-3">
 						<div class="single-footer">
 							<div class="footer-logo">
-								<img src="{% static 'img/footer-logo.png'%}" alt="Footer Logo" />
+								<img src="{% static 'main/img/footer-logo.png'%}" alt="Footer Logo" />
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut .</p>
 							</div>
@@ -505,12 +505,12 @@
 						<div class="single-footer">
 							<h4>Recent Projects</h4>
 							<ul class="projects">
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
-								<li><img src="{% static 'img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
+								<li><img src="{% static 'main/img/project.png'%}" alt="Reccent Project" /></li>
 							</ul>
 						</div>
 					</div>
@@ -530,22 +530,7 @@
 								<p>All Rights Reserved | Copyright 2016 © <strong><a href="http://www.pfind.com/goodies/bizium/">The Bizium</a></strong> template by <strong><a href="http://www.pfind.com/goodies/">pFind's Goodies</a></strong></p>
 							</div>
 						</div>
-						<div class="col-sm-5">
-							<div class="footer-menu pull-right">
-								<ul>
-									<li><a href="#home">Главная</a></li>
-									<li><a href="#about">О нас</a></li>
 
-									<li><a href="#feature-work">Продукты</a></li>
-									<li><a href="#testimonials">Отзывы</a></li>
-									<li><a href="#blog">Новости</a></li>
-									<li><a href="#pricing">Адреса</a></li>
-
-									<li><a href="{% url 'account:user_login' %}">Личный кабинет</a></li>
-
-								</ul>
-							</div>
-						</div>
 						<div class="col-sm-3">
 							<div class="social">
 								<ul>
@@ -566,15 +551,15 @@
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.12.0.min.js'%}"><\/script>')</script>
-        <script src="{% static 'js/plugins.js'%}"></script>
-        <script src="{% static 'js/bootstrap.min.js'%}"></script>
-        <script src="{% static 'js/jquery.mousewheel-3.0.6.pack.js'%}"></script>
-        <script src="{% static 'js/paralax.js'%}"></script>
-        <script src="{% static 'js/jquery.smooth-scroll.js'%}"></script>
-        <script src="{% static 'js/jquery.sticky.js'%}"></script>
-        <script src="{% static 'js/wow.min.js'%}"></script>
-        <script src="{% static 'js/main.js'%}"></script>
+        <script>window.jQuery || document.write('<script src="{% static 'main/js/vendor/jquery-1.12.0.min.js'%}"><\/script>')</script>
+        <script src="{% static 'main/js/plugins.js'%}"></script>
+        <script src="{% static 'main/js/bootstrap.min.js'%}"></script>
+        <script src="{% static 'main/js/jquery.mousewheel-3.0.6.pack.js'%}"></script>
+        <script src="{% static 'main/js/paralax.js'%}"></script>
+        <script src="{% static 'main/js/jquery.smooth-scroll.js'%}"></script>
+        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>
+        <script src="{% static 'main/js/wow.min.js'%}"></script>
+        <script src="{% static 'main/js/main.js'%}"></script>
 
 
 		<script type="text/javascript">
@@ -592,7 +577,7 @@
 			});
 		</script>
 
-		<script src="{% static 'js/custom.js'%}"></script>
+		<script src="{% static 'main/js/custom.js'%}"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
