--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -488,7 +488,7 @@
         <script src="{% static 'main/js/jquery.mousewheel-3.0.6.pack.js'%}"></script>
         <script src="{% static 'main/js/paralax.js'%}"></script>
         <script src="{% static 'main/js/jquery.smooth-scroll.js'%}"></script>
-        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>
+{#        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>#}
         <script src="{% static 'main/js/wow.min.js'%}"></script>
         <script src="{% static 'main/js/main.js'%}"></script>
 
