--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -455,13 +455,7 @@
 		<!-- Copyright -->
 		<div class="copyright">
 				<div class="container">
-					<div class="row">
-						<div class="col-sm-4">
-							<div class="copy-text">
-								<p>All Rights Reserved | Copyright 2016 © <strong><a href="http://www.pfind.com/goodies/bizium/">The Bizium</a></strong> template by <strong><a href="http://www.pfind.com/goodies/">pFind's Goodies</a></strong></p>
-							</div>
-						</div>
-
+					<div class="row" style="align:center">
 						<div class="col-sm-3 offse">
 							<div class="social">
 								<ul>
