--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -290,7 +290,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="title">
-							<h3>Latest From The <span>Blog</span></h3>
+							<h3>Последние <span>Новости</span></h3>
 						</div>
 					</div>
 				</div>
