--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -340,69 +340,8 @@
 
 
 		<!-- Pricing --->
-		<section class="pricing" id="pricing">
+		<section  id="pricing">
 
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="title">
-							<h3>Наши <span>адреса</span></h3>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-lg-offset-3">
-
-					<!-- PRICE ITEM -->
-
-					<div class="panel price panel-green">
-						<div class="panel-heading arrow_box text-center">
-						<h3>Бишкек</h3>
-						</div>
-
-						<ul class="list-group list-group-flush text-center">
-							<li class="list-group-item"><i class="icon-ok text-success"></i>ул.Тыныбекова 4/перес.Некрасова
-                            (возле чайхана Кара-Суу)</li>
-
-						</ul>
-
-					</div>
-					<!-- /PRICE ITEM -->
-
-
-					</div>
-
-
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-
-					<!-- PRICE ITEM -->
-					<div class="panel price panel-green">
-						<div class="panel-heading arrow_box text-center">
-						<h3>Ош</h3>
-						</div>
-
-						<ul class="list-group list-group-flush text-center">
-							<li class="list-group-item"><i class="icon-ok text-success"></i>ул.Курманжан Датка 281а
-                            (возле гостиницы Алай)</li>
-
-						</ul>
-
-					</div>
-					<!-- /PRICE ITEM -->
-
-
-				</div>
-
-
-
-
-
-
-				</div>
-			</div>
 		</section>
 		<!-- Pricing --->
 
@@ -419,7 +358,11 @@
 			<div class="container">
 				<div class="row">
 
-
+                    <div class="col-sm-12">
+						<div class="title">
+							<h3>Наши <span>адреса</span></h3>
+						</div>
+					</div>
 
 
 					<!-- Single Footer -->
@@ -445,7 +388,34 @@
 					<!-- Single Footer -->
 
 
+ <!-- Single Footer -->
+					<div class="col-sm-3">
+						<div class="single-footer">
+							<h4>Жала-Абад</h4>
+							<p>Центральный рынок.
+                                <br/>
+                         Магазин Маркай <br/>
 
+							</p>
+						</div>
+					</div>
+					<!-- Single Footer -->
+
+                    <!-- Single Footer -->
+					<div class="col-sm-3 ">
+							<div class="single-footer">
+                                <h4>Мы в социальных сетях</h4>
+                                <div class="social">
+								<ul>
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								</ul>
+                                </div>
+							</div>
+						</div>
+					<!-- Single Footer -->
 
 				</div>
 			</div>
@@ -456,22 +426,13 @@
 		<div class="copyright">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-4">
+						<div class="col-sm-12 ">
 							<div class="copy-text">
-								<p>All Rights Reserved | Copyright 2016 © <strong><a href="http://www.pfind.com/goodies/bizium/">The Bizium</a></strong> template by <strong><a href="http://www.pfind.com/goodies/">pFind's Goodies</a></strong></p>
+								<p>All Rights Reserved | Copyright 2019 ©   <a href="#">Ananasit</a></p>
 							</div>
 						</div>
 
-						<div class="col-sm-3 offse">
-							<div class="social">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								</ul>
-							</div>
-						</div>
+
 					</div>
 				</div>
 			</div>
@@ -488,7 +449,7 @@
         <script src="{% static 'main/js/jquery.mousewheel-3.0.6.pack.js'%}"></script>
         <script src="{% static 'main/js/paralax.js'%}"></script>
         <script src="{% static 'main/js/jquery.smooth-scroll.js'%}"></script>
-{#        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>#}
+        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>
         <script src="{% static 'main/js/wow.min.js'%}"></script>
         <script src="{% static 'main/js/main.js'%}"></script>
 
